# chat_scraper

./: .env_template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  flake8.yml
scripts/: auto.py  chat_automaton.py
tests/chat_scraper/: test_get_rooms.py  test_global_manager.py  test_login.py
