[tool.poetry]
name = "chat-scraper"
version = "0.1.0"
description = ""
authors = ["baobabmichal <baobabmichal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.lint.dependencies]
black = "^23.12.1"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.chat_scraper.dependencies]
selenium = "^4.16.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pandas = "^2.1.4"
matplotlib = "^3.8.2"


[tool.poetry.group.common.dependencies]
pydantic = "^2.5.3"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
combine_as_imports = true
profile = "black"
known_first_party = ["lib", "tests"]
skip = [
    ".git",
    ".vscode",
    ".idea",
    "__pycache__",
    ".ipynb_checkpoints",
    "stripped",
    "venv",
    ".venv",
    "dist",
    ".hooks",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "lib",
    "tests",
]

[tool.pytest]
timeout = 120
tmp_path_retention_policy = 'none'

[tool.black]
line-length = 120

force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | venv
  | .venv
  | _build
  | buck-out
  | build
  | dist
  | stripped
  | data
  | .hooks
)/
'''